--- a/ExercisePage/Page.css
+++ b/ExercisePage/Page.css
@@ -101,4 +101,57 @@ iframe[src*="spotify.com"] {
 button
 {
   border-radius: 10px;
+  border-color: rgb(176, 176, 175);
+}
+.link-input
+{
+   border-radius: 10px;
+   border-color: #eee;
+}
+input
+{
+  border-radius: 10px;
+  border-color: #eee;
+  text-decoration: solid;
+  padding-left: 3%;
+}
+iframe
+{
+  box-shadow: 0px 12px 24px rgba(0, 0, 0, 0.3);
+}
+#confetti-container {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 50%;
+  height: 50%;
+  z-index: 9999;
+}
+
+.confetti {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background-color: #f00;
+  border-radius: 50%;
+  animation: confetti-fall 2s linear infinite;
+}
+
+.confetti.left {
+  left: -10px;
+  animation-delay: 0.5s;
+}
+
+.confetti.right {
+  right: -10px;
+  animation-delay: 1s;
+}
+
+@keyframes confetti-fall {
+  0% {
+    transform: translate(0, -100%);
+  }
+  100% {
+    transform: translate(0, 100%);
+  }
 }
