--- a/ExercisePage/Page.css
+++ b/ExercisePage/Page.css
@@ -7,29 +7,34 @@ body {
 .container {
   display: flex;
   flex-direction: row;
-  max-width: 1200px;
+  max-width: 100%;
+  max-height: 100%;
   margin: 0 auto;
-  padding: 20px;
+  padding: 2%;
   border-radius: 20%;
 }
 
 .sidebar {
-  flex: 0 0 200px;
+  flex: 0 0 20%;
   background-color: #eee;
-  padding: 20px;
+  padding: 2%;
   border-radius: 20px;
+  max-width: 25%;
+  max-height: 100%;
 }
 
 .player-container, .spotify-container {
   flex: 1;
-  margin-left: 20px;
+  margin-left: 2%;
   border-radius: 20px;
+  max-width: 75%;
+  max-height: 100%;
 }
 
 .player-container iframe,
 .spotify-container iframe {
   width: 100%;
-  height: 500px;
+  height: 100%;
   border-radius: 20px;
 }
 
@@ -61,53 +66,64 @@ body {
   .container {
     flex-direction: column;
     max-width: 100%;
-    padding: 10px;
+    max-height: 100%;
+    padding: 2%;
   }
 
   .sidebar {
     flex: 1 0 100%;
     margin-bottom: 10px;
+    max-width: 100%;
+    max-height: 25%;
   }
 
   .player-container,
   .spotify-container {
     flex: 1 0 100%;
     margin-left: 0;
+    max-width: 100%;
+    max-height: 75%;
   }
 
   .player-container iframe,
   .spotify-container iframe {
-    height: 250px;
+    height: 50%;
   }
 }
 
 @media (min-width: 768px) and (max-width: 1200px) {
   .container {
     max-width: 768px;
+    max-height: 100%;
   }
 }
 
 /* Increase width of YouTube */
 iframe[src*="youtube.com"] {
   width: 100%;
-  max-width: 900px;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 /* Decrease width of Spotify */
 iframe[src*="spotify.com"] {
   width: 100%;
-  max-width: 400px;
+  max-width: 100%;
+  max-height: 100%;
 }
+
 button
 {
   border-radius: 10px;
   border-color: rgb(176, 176, 175);
 }
-.link-input
+
+.linkinput
 {
    border-radius: 10px;
    border-color: #eee;
 }
+
 input
 {
   border-radius: 10px;
@@ -115,43 +131,8 @@ input
   text-decoration: solid;
   padding-left: 3%;
 }
+
 iframe
 {
   box-shadow: 0px 12px 24px rgba(0, 0, 0, 0.3);
-}
-#confetti-container {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 50%;
-  height: 50%;
-  z-index: 9999;
-}
-
-.confetti {
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  background-color: #f00;
-  border-radius: 50%;
-  animation: confetti-fall 2s linear infinite;
-}
-
-.confetti.left {
-  left: -10px;
-  animation-delay: 0.5s;
-}
-
-.confetti.right {
-  right: -10px;
-  animation-delay: 1s;
-}
-
-@keyframes confetti-fall {
-  0% {
-    transform: translate(0, -100%);
-  }
-  100% {
-    transform: translate(0, 100%);
-  }
 }
