--- a/ExercisePage/Page.css
+++ b/ExercisePage/Page.css
@@ -136,3 +136,21 @@ iframe
 {
   box-shadow: 0px 12px 24px rgba(0, 0, 0, 0.3);
 }
+
+.sidebar {
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.timerContainer {
+  text-align: center;
+}
+
+.button-container {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.button-container button {
+  margin-right: 10px;
+}
